--- a/questions.ipynb
+++ b/questions.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import missingno as msno\n",
+    "\n",
     "best_movies = pd.read_csv(\"best_movies.csv\", sep=\",\")"
    ]
   },
@@ -80,6 +82,7 @@
     }
    ],
    "source": [
+    "#turning ratings from string to float type\n",
     "best_movies.rating.apply(lambda x:float(x))"
    ]
   }
